--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ log4j-api = "2.17.1" # Version set by Minecraft
 guava = "31.0.1-jre" # Version set by Minecraft
 
 # Platform expectations
-paper = "1.18.1-R0.1-SNAPSHOT"
+paper = "1.18.2-R0.1-SNAPSHOT"
 checker-qual = "3.22.0"
 guice = "5.1.0"
 spotbugs = "4.7.0"
@@ -13,7 +13,6 @@ snakeyaml = "1.30" # Version set by Bukkit
 
 # Adventure & MiniMessage
 adventure-api = "4.10.1"
-adventure-text-minimessage = "4.10.1"
 adventure-platform-bukkit = "4.1.0"
 
 # Plugins
@@ -60,7 +59,7 @@ spotbugs = { group = "com.github.spotbugs", name = "spotbugs-annotations", versi
 
 # Adventure & MiniMessage
 adventure = { group = "net.kyori", name = "adventure-api", version.ref = "adventure-api" }
-minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure-text-minimessage" }
+minimessage = { group = "net.kyori", name = "adventure-text-minimessage", version.ref = "adventure-api" }
 adventurePlatformBukkit = { group = "net.kyori", name = "adventure-platform-bukkit", version.ref = "adventure-platform-bukkit" }
 
 # Plugins
