--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
   ],
   "timezone": "Europe/Berlin",
   "schedule": [
-    "on monday after 9am"
+    "every monday"
   ],
   "labels": ["Renovate"],
   "commitMessagePrefix": "build: ",
