--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,27 @@ jobs:
         env:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
+      - name: Publish core javadoc
+        if: ${{ runner.os == 'Linux' && env.STATUS == 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6'}}
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+        with:
+          source-directory: 'Core/build/docs/javadoc'
+          destination-github-username: 'IntellectualSites'
+          destination-repository-name: 'plotsquared-javadocs'
+          user-email: ${{ secrets.USER_EMAIL }}
+          target-branch: main
+          target-directory: core
+      - name: Publish bukkit javadoc
+        if: ${{ runner.os == 'Linux' && env.STATUS == 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6'}}
+        uses: cpina/github-action-push-to-another-repository@main
+        env:
+          SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
+        with:
+          source-directory: 'Bukkit/build/docs/javadoc'
+          destination-github-username: 'IntellectualSites'
+          destination-repository-name: 'plotsquared-javadocs'
+          user-email: ${{ secrets.USER_EMAIL }}
+          target-branch: main
+          target-directory: bukkit
