Turn down renovate a bit

--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "config:base",
     ":semanticCommitsDisabled"
   ],
-  "labels": ["Renovate"],
-  "rebaseWhen": "conflicted"
+  "labels": ["dependencies"],
+  "rebaseWhen": "conflicted",
+  "schedule": ["on the first day of the week"]
 }
