--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,7 +2,7 @@ name: draft release
 on:
   push:
     branches:
-      - v6
+      - main
   pull_request:
     types: [ opened, reopened, synchronize ]
   pull_request_target:
