--- a/renovate.json
+++ b/renovate.json
@@ -8,7 +8,5 @@
     "dependencies"
   ],
   "rebaseWhen": "conflicted",
-  "schedule": [
-    "on the first day of the week"
-  ]
+  "schedule": ["on the first day of the month"]
 }
