--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -9,5 +9,11 @@
     "dependencies"
   ],
   "rebaseWhen": "conflicted",
-  "schedule": ["on the first day of the month"]
+  "schedule": ["on the first day of the month"],
+  "ignoreDeps": [
+    "com.google.code.gson:gson",
+    "com.google.guava:guava",
+    "org.yaml:snakeyaml",
+    "org.apache.logging.log4j:log4j-api",
+  ]
 }
