--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,7 +36,7 @@ serverlib = "2.3.7"
 shadow = "8.3.6"
 grgit = "4.1.1"
 spotless = "7.0.3"
-nexus = "2.0.0"
+publish = "0.31.0"
 runPaper = "2.3.1"
 
 [libraries]
@@ -81,5 +81,5 @@ serverlib = { group = "dev.notmyfault.serverlib", name = "ServerLib", version.re
 shadow = { id = "com.gradleup.shadow", version.ref = "shadow" }
 grgit = { id = "org.ajoberstar.grgit", version.ref = "grgit" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
-nexus = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexus" }
+publish = { id = "com.vanniktech.maven.publish", version.ref = "publish" }
 runPaper = { id = "xyz.jpenilla.run-paper", version.ref = "runPaper" }
