--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,7 @@ serverlib = "2.3.7"
 jpa-api = "3.2.0"
 hibernate-core = "7.1.0.Final"
 flyway-core = "11.11.2"
+jaxbRuntime = "4.0.5"
 # JDBC Drivers
 mariadb-java-client = "3.5.5"
 sqlite-jdbc = "3.50.3.0"
@@ -88,7 +89,9 @@ serverlib = { group = "dev.notmyfault.serverlib", name = "ServerLib", version.re
 # Database
 jpaApi = { group = "jakarta.persistence", name = "jakarta.persistence-api", version.ref = "jpa-api" }
 hibernateCore = { group = "org.hibernate.orm", name = "hibernate-core", version.ref = "hibernate-core" }
+hibernateCommunityDialects = { group = "org.hibernate.orm", name = "hibernate-community-dialects", version.ref = "hibernate-core" }
 flywayCore = { group = "org.flywaydb", name = "flyway-core", version.ref = "flyway-core" }
+jaxbRuntime = { group = "org.glassfish.jaxb", name = "jaxb-runtime", version.ref = "jaxbRuntime" }
 # JDBC Drivers
 mariadbJavaClient = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb-java-client" }
 sqliteJdbc = { group = "org.xerial", name = "sqlite-jdbc", version.ref = "sqlite-jdbc" }
