--- a/Bukkit/src/main/resources/plugin.yml
+++ b/Bukkit/src/main/resources/plugin.yml
@@ -4,10 +4,10 @@ api-version: "1.13"
 version: "${version}"
 load: STARTUP
 description: "Easy, yet powerful Plot World generation and management."
-authors: [ Citymonstret, Empire92, MattBDev, dordsor21, NotMyFault, SirYwell ]
+authors: [ Citymonstret, Empire92, MattBDev, dordsor21, NotMyFault, SirYwell, Kolja Menzel ]
 website: https://www.spigotmc.org/resources/77506/
 softdepend: [ Vault, PlaceholderAPI, Essentials, LuckPerms, BungeePerms, MVdWPlaceholderAPI ]
-loadbefore: [ MultiWorld, Multiverse-Core ]
+loadbefore: [ MultiWorld, Multiverse-Core, TransientJobs, TransientPlots ]
 depend: [ WorldEdit ]
 database: false
 commands:
